create CSS file

--- a/inde.html
+++ b/inde.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./assets/icon/favicon.jpeg" type="image/x-icon">
-    <title>A-188-pro-upgrade-ui-clone</title>
+    <link rel="stylesheet" href="style.css">
+    <title>pro-upgrade-ui-clone</title>
 </head>
 <body>
-    <section>
-        <div>
+    <section class="txt-img">
+        <div class="img">
             <img src="./assets/header-1.jpeg" alt="header">
+        </div>
+        <div class="tex">
+            <h2>Pro-Upgrade-UI</h2>
         </div>
     </section>
 </body>
