--- a/inde.html
+++ b/inde.html
@@ -12,8 +12,8 @@
         <div class="img">
             <img src="./assets/header-1.jpeg" alt="header">
         </div>
-        <div class="tex">
-            <h2>Pro-Upgrade-UI</h2>
+        <div class="txt">
+            <h1>Pro-Upgrade-UI</h1>
         </div>
     </section>
 </body>
