--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <title>pro-upgrade-ui-clone</title>
 </head>
+
 <body>
     <section class="txt-img">
         <div class="img">
@@ -16,5 +18,27 @@
             <h1>Pro-Upgrade-UI</h1>
         </div>
     </section>
+    <!-- Box section -->
+    <section class="main-container">
+        <div class="box">
+            <h1>Box1</h1>
+        </div>
+        <div class="box">
+            <h1>Box2</h1>
+        </div>
+        <div class="box">
+            <h1>Box3</h1>
+        </div>
+        <div class="box">
+            <h1>Box4</h1>
+        </div>
+        <div class="box">
+            <h1>Box5</h1>
+        </div>
+        <div class="box">
+            <h1>Box6</h1>
+        </div>
+    </section>
 </body>
+
 </html>
