add comment out SMS

--- a/index.html
+++ b/index.html
@@ -20,15 +20,18 @@
     </section>
     <!-- Box section -->
     <section class="main-container">
+        <!-- 1st line 1 box -->
         <div class="box">
             <h1>Box1</h1>
         </div>
-        <div class="box">
+         <!-- 2st line 2 boxs -->
+        <div class="box" >
             <h1>Box2</h1>
         </div>
         <div class="box">
             <h1>Box3</h1>
         </div>
+         <!-- 3rd  line 3 boxs -->
         <div class="box">
             <h1>Box4</h1>
         </div>
