--- a/index.html
+++ b/index.html
@@ -15,31 +15,31 @@
             <img src="./assets/header-1.jpeg" alt="header">
         </div>
         <div class="txt">
-            <h1>Pro-Upgrade-UI</h1>
+            <h1>Pro Upgrade UI </h1>
         </div>
     </section>
     <!-- Box section -->
     <section class="main-container">
         <!-- 1st line 1 box -->
         <div class="box">
-            <h1>Box1</h1>
+            <h1>Starter Plan</h1>
         </div>
-         <!-- 2st line 2 boxs -->
-        <div class="box" >
-            <h1>Box2</h1>
+        <!-- 2nd line 2 boxes -->
+        <div class="box">
+            <h1>Advanced Plan</h1>
         </div>
         <div class="box">
-            <h1>Box3</h1>
+            <h1>Business Suite</h1>
         </div>
-         <!-- 3rd  line 3 boxs -->
+        <!-- 3rd line 3 boxes -->
         <div class="box">
-            <h1>Box4</h1>
-        </div>
-        <div class="box">
-            <h1>Box5</h1>
+            <h1>Pro Upgrade</h1>
         </div>
         <div class="box">
-            <h1>Box6</h1>
+            <h1>Developer Pack</h1>
+        </div>
+        <div class="box">
+            <h1>Enterprise Plus</h1>
         </div>
     </section>
 </body>
