--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./assets/icon/favicon.jpeg" type="image/x-icon">
+    <!-- Font Awesome CDN -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+        integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
     <title>pro-upgrade-ui-clone</title>
 </head>
@@ -22,24 +26,72 @@
     <section class="main-container">
         <!-- 1st line 1 box -->
         <div class="box">
-            <h1>Starter Plan</h1>
+            <!-- price-info for  line 1 , box 1 -->
+            <div class="price-info">
+                <h1>Starter Plan</h1>
+                <span>0</span>
+                <h4>$</h4>
+                <small>USD/ <br> month</small>
+                <h2>This paln is free for Everyone</h2>
+            </div>
+
         </div>
         <!-- 2nd line 2 boxes -->
         <div class="box">
-            <h1>Advanced Plan</h1>
+            <!-- price-info for  line 2 , box 2 -->
+            <div class="price-info">
+                <h1>Advanced Plan</h1>
+                <span>0</span>
+                <h4>$</h4>
+                <small>USD/ <br> month</small>
+                <h2>This paln is free for Everyone</h2>
+            </div>
+
         </div>
         <div class="box">
-            <h1>Business Suite</h1>
+
+            <!-- price-info for  line 2 , box 3 -->
+            <div class="price-info">
+                <h1>Business Suite</h1>
+                <span>0</span>
+                <h4>$</h4>
+                <small>USD/ <br> month</small>
+                <h2>This paln is free for Everyone</h2>
+            </div>
         </div>
         <!-- 3rd line 3 boxes -->
         <div class="box">
-            <h1>Pro Upgrade</h1>
+
+            <!-- price-info for  line 3 , box 1 -->
+            <div class="price-info">
+                <h1>Pro Upgrade</h1>
+                <span>0</span>
+                <h4>$</h4>
+                <small>USD/ <br> month</small>
+                <h2>This paln is free for Everyone</h2>
+            </div>
         </div>
         <div class="box">
-            <h1>Developer Pack</h1>
+
+            <!-- price-info for  line 3 , box 2 -->
+            <div class="price-info">
+                <h1>Developer Pack</h1>
+                <span>0</span>
+                <h4>$</h4>
+                <small>USD/ <br> month</small>
+                <h2>This paln is free for Everyone</h2>
+            </div>
         </div>
         <div class="box">
-            <h1>Enterprise Plus</h1>
+
+            <!-- price-info for  line 3 , box 3 -->
+            <div class="price-info">
+                <h1>Enterprise Plus</h1>
+                <span>0</span>
+                <h4>$</h4>
+                <small>USD/ <br> month</small>
+                <h2>This paln is free for Everyone</h2>
+            </div>
         </div>
     </section>
 </body>
