--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <div class="txt">
             <h1>Pro Upgrade UI </h1>
         </div>
+
     </section>
     <!-- Box section -->
     <section class="main-container">
@@ -28,8 +29,9 @@
         <div class="box">
             <!-- price-info for  line 1 , box 1 -->
             <div class="price-info">
-                <h1>Starter Plan</h1>
-                <span>0</span>
+                <i class="fa-solid fa-hourglass-start"></i>       
+                <h1> 🚀 Starter Plan</h1>       
+                <span>Free</span>
                 <h4>$</h4>
                 <small>USD/ <br> month</small>
                 <h2>This paln is free for Everyone</h2>
@@ -40,8 +42,8 @@
         <div class="box">
             <!-- price-info for  line 2 , box 2 -->
             <div class="price-info">
-                <h1>Advanced Plan</h1>
-                <span>0</span>
+                <h1> ⚙️ Advanced Plan</h1>
+                <span>9</span>
                 <h4>$</h4>
                 <small>USD/ <br> month</small>
                 <h2>This paln is free for Everyone</h2>
@@ -52,8 +54,11 @@
 
             <!-- price-info for  line 2 , box 3 -->
             <div class="price-info">
-                <h1>Business Suite</h1>
-                <span>0</span>
+                <i class="fa-solid fa-business-time"></i>
+                <h1> 💼  Business Suite</h1>
+                
+                
+                <span>19</span>
                 <h4>$</h4>
                 <small>USD/ <br> month</small>
                 <h2>This paln is free for Everyone</h2>
@@ -64,8 +69,8 @@
 
             <!-- price-info for  line 3 , box 1 -->
             <div class="price-info">
-                <h1>Pro Upgrade</h1>
-                <span>0</span>
+                <h1> 🌟 Pro Upgrade</h1>
+                <span>29</span>
                 <h4>$</h4>
                 <small>USD/ <br> month</small>
                 <h2>This paln is free for Everyone</h2>
@@ -75,8 +80,8 @@
 
             <!-- price-info for  line 3 , box 2 -->
             <div class="price-info">
-                <h1>Developer Pack</h1>
-                <span>0</span>
+                <h1> 👨‍💻Developer Pack</h1>
+                <span>49</span>
                 <h4>$</h4>
                 <small>USD/ <br> month</small>
                 <h2>This paln is free for Everyone</h2>
@@ -86,8 +91,8 @@
 
             <!-- price-info for  line 3 , box 3 -->
             <div class="price-info">
-                <h1>Enterprise Plus</h1>
-                <span>0</span>
+                <h1>🏢 Enterprise Plus</h1>
+                <span>99</span>
                 <h4>$</h4>
                 <small>USD/ <br> month</small>
                 <h2>This paln is free for Everyone</h2>
