--- a/index.html
+++ b/index.html
@@ -116,6 +116,16 @@
             </div>
         </div>
     </section>
+    <!-- Success Popup -->
+<div class="popup" id="successPopup">
+  <div class="popup-content">
+    <i class="fa-solid fa-circle-check"></i>
+    <p>Successful!</p>
+  </div>
+</div>
+
+<script src="script.js"></script>
+
 </body>
 
 </html>
