Fixed icons, img , links

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="responsive.css">
     <title>pro-upgrade-ui-clone</title>
 </head>
 
@@ -123,7 +124,7 @@
             <p>Successful!</p>
         </div>
     </div>
-    
+
     <div class="social-links">
         <p> Contact With Me :</p>
         <div class="links">
@@ -153,7 +154,7 @@
 
     <footer class="copyright">
         <p>
-            © 2025 <strong>code-fusionary-pricing-plans</strong> · Designed & Developed by
+            © 2025 <strong>Pro-Upgrade-UI</strong> · Designed & Developed by
             <a href="https://www.github.com/hasibcoderlab" target="_blank">Hasib Hasan</a>.<br />
             <span>All rights reserved.</span>
         </p>
