--- a/index.html
+++ b/index.html
@@ -39,8 +39,13 @@
                 <small>USD/month</small>
                 <h2>This plan is free for everyone</h2>
             </div>
-            <!-- plan btn -->
-            <div class="btn"><button>your current paln</button>
+            <!-- 1st box plan btn -->
+            <div class="btn">
+                <button>your current paln</button>
+            </div>
+            <!-- content & icon  -->
+            <div class="content-info">
+
             </div>
         </div>
         <!-- 2nd line 2 boxes -->
@@ -55,7 +60,12 @@
                 <small>USD/month</small>
                 <h2>Perfect for learners who need more power</h2>
             </div>
-            <div class="btn"><button>Get Advanced</button>
+            <div class="btn">
+                <button>Get Advanced</button>
+            </div>
+            <!-- content & icon  -->
+            <div class="content-info">
+                <h1>Hello</h1>
             </div>
         </div>
 
@@ -71,7 +81,13 @@
                 <small>USD/ month</small>
                 <h2>Designed for teams and collaboration tools</h2>
             </div>
-            <div class="btn"><button>Upgrade to Business</button></div>
+            <div class="btn">
+                <button>Upgrade to Business</button>
+            </div>
+            <!-- content & icon  -->
+            <div class="content-info">
+                <h1>Hello</h1>
+            </div>
         </div>
 
 
@@ -87,7 +103,13 @@
                 <small>USD/month</small>
                 <h2>Unlock advanced AI and faster generation</h2>
             </div>
-            <div class="btn"><button>Get Pro</button></div>
+            <div class="btn">
+                <button>Get Pro</button>
+            </div>
+            <!-- content & icon  -->
+            <div class="content-info">
+                <h1>Hello</h1>
+            </div>
         </div>
 
         <div class="box">
@@ -100,7 +122,13 @@
                 <small>USD/month</small>
                 <h2>For coders, API lovers & automation tools</h2>
             </div>
-            <div class="btn"><button>Activate Developer</button></div>
+            <div class="btn">
+                <button>Activate Developer</button>
+            </div>
+            <!-- content & icon  -->
+            <div class="content-info">
+                <h1>Hello</h1>
+            </div>
         </div>
         <div class="box">
             <!-- price-info for  line 3 , box 3 -->
@@ -114,6 +142,10 @@
             </div>
             <div class="btn">
                 <button>Elite Research Plan</button>
+            </div>
+            <!-- content & icon  -->
+            <div class="content-info">
+                <h1>Hello</h1>
             </div>
         </div>
     </section>
