--- a/index.html
+++ b/index.html
@@ -43,14 +43,18 @@
             <div class="btn">
                 <button>your current paln</button>
             </div>
-            <!-- content & icon  -->
+            <!-- content & icon box  1 line 1 -->
             <div class="content-info">
+                <p> <i class="fa-solid fa-lock"></i> Limited Upgrade version </p> <br>
+                <p> <i class="fa-solid fa-comment-dots"></i> Basic messaging </p><br>
+                <p> <i class="fa-solid fa-users"></i> Community support </p><br>
+
 
             </div>
         </div>
         <!-- 2nd line 2 boxes -->
         <div class="box">
-            <!-- price-info for  line 2 , box 2 -->
+            <!-- price-info for row/line 2 col 1  , box 2  -->
             <div class="price-info">
                 <!-- 2️⃣ Advanced Plan -->
                 <h1><i class="fa-solid fa-gears"></i> Advanced Plan</h1>
@@ -65,12 +69,14 @@
             </div>
             <!-- content & icon  -->
             <div class="content-info">
-                <h1>Hello</h1>
+                <p> <i class="fa-solid fa-clock"></i> More message history </p>
+                <p> <i class="fa-solid fa-bolt"></i> Faster response </p>
+                <p> <i class="fa-solid fa-file-upload"> </i> File uploads (limited) </p>
             </div>
         </div>
 
         <div class="box">
-            <!-- price-info for  line 2 , box 3 -->
+            <!-- price-info for row/line 2 col 2  , box 3  -->
             <div class="price-info">
 
                 <!-- 3️⃣ Business Suite -->
@@ -86,7 +92,12 @@
             </div>
             <!-- content & icon  -->
             <div class="content-info">
-                <h1>Hello</h1>
+                <p> <i class="fa-solid fa-image"></i>  Faster & advanced image generation </p> <br>
+                <p> <i class="fa-solid fa-wrench"></i> Advanced Pro UI access </p> <br>
+                <p> <i class="fa-solid fa-puzzle-piece"></i> Custom GPTs </p><br>
+                <p> <i class="fa-solid fa-flask"></i> Expanded memory & deep research </p>
+                    
+
             </div>
         </div>
 
@@ -106,9 +117,11 @@
             <div class="btn">
                 <button>Get Pro</button>
             </div>
-            <!-- content & icon  -->
+            <!-- content & icon  box 2 -->
             <div class="content-info">
-                <h1>Hello</h1>
+                <p> <i class="fa-solid fa-robot"></i> Unlimited GPT-5 access </p>
+                <p> <i class="fa-solid fa-memory"></i> Expanded memory & context </p>
+                <p> <i class="fa-solid fa-file-upload"> </i> File uploads (limited) </p>
             </div>
         </div>
 
@@ -128,6 +141,13 @@
             <!-- content & icon  -->
             <div class="content-info">
                 <h1>Hello</h1>
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
             </div>
         </div>
         <div class="box">
@@ -145,7 +165,13 @@
             </div>
             <!-- content & icon  -->
             <div class="content-info">
-                <h1>Hello</h1>
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
             </div>
         </div>
     </section>
