--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
             </div>
             <!-- content & icon  -->
             <div class="content-info">
-                <p> <i class="fa-solid fa-image"></i>  Faster & advanced image generation </p> <br>
+                <p> <i class="fa-solid fa-people-roof"></i>Team collaboration tools </p> <br>
                 <p> <i class="fa-solid fa-wrench"></i> Advanced Pro UI access </p> <br>
-                <p> <i class="fa-solid fa-puzzle-piece"></i> Custom GPTs </p><br>
-                <p> <i class="fa-solid fa-flask"></i> Expanded memory & deep research </p>
+                <p> <i class="fa-solid fa-memory"></i> Expanded memory & context </p><br>
+                <p> <i class="fa-solid fa-headset"></i> Priority support </p>
                     
 
             </div>
@@ -119,9 +119,10 @@
             </div>
             <!-- content & icon  box 2 -->
             <div class="content-info">
-                <p> <i class="fa-solid fa-robot"></i> Unlimited GPT-5 access </p>
-                <p> <i class="fa-solid fa-memory"></i> Expanded memory & context </p>
-                <p> <i class="fa-solid fa-file-upload"> </i> File uploads (limited) </p>
+                <p> <i class="fa-solid fa-image"></i>  Faster & advanced image generation </p> <br>
+                <p> <i class="fa-solid fa-wrench"></i> Advanced Pro UI access </p> <br>
+                <p> <i class="fa-solid fa-puzzle-piece"></i> Custom GPTs </p><br>
+                <p> <i class="fa-solid fa-flask"></i> Expanded memory & deep research </p>
             </div>
         </div>
 
@@ -140,14 +141,10 @@
             </div>
             <!-- content & icon  -->
             <div class="content-info">
-                <h1>Hello</h1>
-                <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                </ul>
+               <p> <i class="fa-solid fa-code"></i>  API access </p> <br>
+                <p> <i class="fa-solid fa-cogs"></i> Automation tools </p>  <br>
+                <p> <i class="fa-solid fa-puzzle-piece"></i> Custom Pro  version </p><br>
+                <p> <i class="fa-solid fa-chalkboard-teacher"></i> Priority support & training</p>
             </div>
         </div>
         <div class="box">
