updated content info

--- a/index.html
+++ b/index.html
@@ -143,8 +143,11 @@
             <div class="content-info">
                 <p> <i class="fa-solid fa-code"></i> API access </p> <br>
                 <p> <i class="fa-solid fa-cogs"></i> Automation tools </p> <br>
-                <p> <i class="fa-solid fa-puzzle-piece"></i> Custom Pro version </p><br>
-                <p> <i class="fa-solid fa-chalkboard-teacher"></i> Priority support & training</p>
+                <p> <i class="fa-solid fa-puzzle-piece"></i> Customize pro version </p><br>
+                <p> <i class="fa-solid fa-desktop"></i>unlimited generate solving code</p><br>
+                <p> <i class="fa-solid fa-chalkboard-teacher"></i> Priority support & training</p> <br>
+                <p> <i class="fa-solid fa-laptop-code"></i> Setup in  code editor</p>
+
             </div>
         </div>
         <div class="box">
@@ -162,13 +165,13 @@
             </div>
             <!-- content & icon  -->
             <div class="content-info">
-                <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                </ul>
+                <p> <i class="fa-solid fa-user-tie"></i> Dedicated account manager </p> <br>
+                <p><i class="fa-solid fa-robot"></i> Unlimited Acces Pro version + all features </p> <br>
+                <p> <i class="fa-solid fa-network-wired"></i> Custom integrations </p> <br>
+                <p> <i class="fa-solid fa-chart-line"></i> Deep research & analytics </p> <br>
+                <p> <i class="fa-solid fa-users-gear"></i> Team management tools </p>
+
+
             </div>
         </div>
     </section>
@@ -210,7 +213,7 @@
     <footer class="copyright">
         <p>
             © 2025 <strong>Pro-Upgrade-UI</strong> · Designed & Developed by
-            <a href="https://www.github.com/hasibcoderlab" target="_blank">Hasib Hasan</a>.<br />
+            <a href="https://github.com/HasibCoderLab" target="_blank">Hasib Hasan</a>.<br />
             <span>All rights reserved.</span>
         </p>
     </footer>
