add style in content info

--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./assets/icon/favicon.jpeg" type="image/x-icon">
     <!-- Font Awesome CDN -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
-        integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="responsive.css">
     <title>pro-upgrade-ui-clone</title>
@@ -78,7 +77,6 @@
         <div class="box">
             <!-- price-info for row/line 2 col 2  , box 3  -->
             <div class="price-info">
-
                 <!-- 3️⃣ Business Suite -->
                 <h1><i class="fa-solid fa-briefcase"></i> Business Suite</h1>
                 <h4>$</h4>
@@ -144,9 +142,9 @@
                 <p> <i class="fa-solid fa-code"></i> API access </p> <br>
                 <p> <i class="fa-solid fa-cogs"></i> Automation tools </p> <br>
                 <p> <i class="fa-solid fa-puzzle-piece"></i> Customize pro version </p><br>
-                <p> <i class="fa-solid fa-desktop"></i>unlimited generate solving code</p><br>
+                <p> <i class="fa-solid fa-desktop"></i> unlimited generate solving code</p><br>
                 <p> <i class="fa-solid fa-chalkboard-teacher"></i> Priority support & training</p> <br>
-                <p> <i class="fa-solid fa-laptop-code"></i> Setup in  code editor</p>
+                <p> <i class="fa-solid fa-laptop-code"></i> Setup in code editor</p>
 
             </div>
         </div>
